<resources>
    <string name="app_name">Weird Calculator</string>
    <string name="editText1">1</string>
    <string name="editText2">1</string>
    <string name="textviewL">Pound</string>
    <string name="textviewR">Pound</string>
    <string name="textviewweightR">1</string>
    <string name="textviewLengthR">Inch</string>
    <string name="textviewLengthL">Inch</string>
    <string name="textviewVolR">1</string>
    <string name="textviewChooseDimension">Choose a Dimension</string>
</resources>
