<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WeightActivity">

    <EditText
            android:layout_width="162dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/editText2"
            android:text="@string/editText1"
            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="165dp"
            android:layout_height="49dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:text="@string/editText2" android:textAlignment="center" android:textSize="18sp"/>
    <TextView
            android:text="@string/textviewL"
            android:layout_width="170dp"
            android:layout_height="32dp"
            android:id="@+id/textViewL"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textViewR"
            app:layout_constraintEnd_toStartOf="@+id/textViewR" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.347" android:textAlignment="center"/>
    <TextView
            android:text="@string/textviewR"
            android:layout_width="184dp"
            android:layout_height="34dp"
            android:id="@+id/textViewR" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textAlignment="center"/>
    <ListView
            android:layout_width="181dp"
            android:layout_height="398dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/listViewWeight2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textViewR"/>
    <ListView
            android:layout_width="184dp"
            android:layout_height="398dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/listViewWeight1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textViewL"/>
</android.support.constraint.ConstraintLayout>